# finBI

./: README.md
code/: categories.py  first.bat  get_ngrok_url.py  pyproject.toml  your_streamlit_app.py
