[tool.poetry]
name = "streamlit-yfinance-app"
version = "0.1.0"
description = "Streamlit app for displaying stock data and calculating optimal portfolio."
authors = ["Your Name <youremail@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
yfinance = "^0.1.64"
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"
altair = "^4.1"  # Add this line

[tool.poetry.dev-dependencies]
