[tool.poetry]
name = "streamlit-yfinance-fred-app"
version = "0.2.0"
description = "Streamlit app for displaying stock and FRED data and calculating optimal portfolio."
authors = ["Your Name <youremail@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.0"
yfinance = "^0.1.64"
fredapi = "^0.4.3"
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"
altair = "^4.1"
plotly = "^5.0"
dash = "^2.0"  # Adding Dash
dash-core-components = "^2.0"  # Dash core components
dash-html-components = "^2.0"  # Dash HTML components
simfin = "^0.9.3"

[tool.poetry.dev-dependencies]
